# LCG

./: .gitignore  .travis.yml  Doxyfile  LICENSE  Makefile.am  README  README.md  TODO  _config.yml  autapse.m  config.xml  configure.ac  environment.md  index.html  index.md  installation.md  lcg-completion.bash  lcg-env.sh  lcg-env.sh.in  manual.bib  manual.md  manual.tex  noisy_bg.xml  params.json  quickref.tex  svn-commit.tmp
_layouts/: modernist.html  slate.html
chapters/: configuration_files.tex  data_files.tex  entities.tex  features.tex  getting_started.tex  installation.tex  introduction.tex  matlab.tex  protocols.tex  stimgen.tex  streams.tex
common/: Makefile.am  aec.cpp  aec.h  analogy_io.cpp  analogy_io.h  comedi_io.cpp  comedi_io.h  common.h  configuration.cpp  configuration.h  daq_io.cpp  daq_io.h  h5rec.cpp  h5rec.h  randlib.cpp  randlib.h  sha1.h  stimuli.cpp  stimuli.h  stimulus.cpp  stimulus.h  thread_safe_queue.h  types.h  utils.cpp  utils.h
configs/: I_plus_bg_G_template.xml  Isin-bg.xml  afs.xml  afs_clone.xml  cbn.xml  config.xml  connection.xml  fclamp-bg.xml  fclamp.xml  fclamp_template.xml  freq_clamp.xml  lif.xml  noisy_bg.xml  ou.xml  prc.xml  reliability_autaptic.xml  reliability_disynaptic.xml  response_clamp.xml  sinusoids_template.xml  spont-bg.xml  spontaneous_template.xml
configurations/: I_plus_bg_G_template.xml  autapse.xml  cbn_step.stim  cclamprc  conductance_based_neuron.xml  correlations_template.xml  disynaptic_microcircuit.xml  disynaptic_microcircuit_plus_bg.xml  epsp_template.xml  extracellular_pid.xml  extracellular_stim.xml  fI_PID.xml  fclamp_plus_bg_G_template.xml  fclamp_template.xml  frequency_clamp.xml  in_vivo_like.xml  ipsp_template_exp2syn.xml  ipsp_template_lif.xml  ipsp_template_tmg.xml  izhikevich.xml  lif.xml  ltp_ltd.xml  pairing.xml  periodic_pulse.xml  poisson.xml  psp_template.xml  reliability_autaptic.xml  reliability_disynaptic.xml  reliability_disynaptic_current.xml  spontaneous.xml  spontaneous_plus_bg_G.xml  synapses.xml  trigger.xml  triggered_recording.xml  triggered_stimulation.xml  wang-buzsaki_neuron.xml
debian/: changelog  control  copyright  lcg.bash-completion  rules
doc/manual/: manual.bib  manual.tex
doc/manual/chapters/: entities.tex  getting_started.tex  installation.tex  unix.tex
doc/manual/stimgen/: documentation.tex
engine/: Makefile.am  engine.cpp  engine.h
entities/: Makefile.am  analog_io.cpp  analog_io.h  conductance_stimulus.h  connections.cpp  connections.h  constants.cpp  constants.h  converter.h  currents.cpp  currents.h  delay.cpp  delay.h  digital_io.cpp  digital_io.h  dynamical_entity.h  entity.cpp  entity.h  event_counter.cpp  event_counter.h  events.cpp  events.h  frequency_estimator.cpp  frequency_estimator.h  functors.cpp  functors.h  generator.h  neurons.cpp  neurons.h  ou.cpp  ou.h  periodic_pulse.cpp  periodic_pulse.h  pid.cpp  pid.h  poisson_generator.cpp  poisson_generator.h  probability_estimator.cpp  probability_estimator.h  recorders.cpp  (+9 more)
examples/: .gitignore  Makefile.am  aec_test.cpp  aec_test.i  autapse.xml  cbn_step.stim  conductance_based_neuron.xml  frequency_clamp.stim  frequency_clamp.xml  izhikevich.xml  lif.xml  noise.stim  poisson.xml  synapses.xml  trig_sobol_delay.xml  triggered_pulse.stim  triggered_recording.m  triggered_recording.xml  triggered_stimulation.xml
man/: .gitignore  Makefile.in  cmds-highlevel.txt  cmds-lowlevel.txt  entities.txt  lcg-annotate.txt  lcg-env.txt  lcg-experiment.txt  lcg-output.txt  lcg-zero.txt  lcg.txt  manpage-base-url.xsl.in  manpage-base.xsl  manpage-normal.xsl  streams.txt
matlab/: load_h5_trace.m
non-rt/: .gitignore  Makefile.am  configuration.cpp  h5rec.cpp  h5rec.h
python/: .gitignore  Makefile.in  README  dlutils.py  setup.py
python/AEC/: AECoffline.py  __init__.py
python/aec/: __init__.py
python/dclamp/: __init__.py  io_utils.py
python/lcg/: Rin.py  Rin_protocol.py  __init__.py  ampa_nmda.py  ap.py  common.py  config_writer.py  correlations.py  correlations_protocol.py  create_folder.py  cv.py  disynaptic_microcircuit.py  dynclamp.py  ecode.py  entities.py  exp_launcher.py  extracellular_protocol.py  extract_kernels.py  f_opt.py  fclamp.py  fi_pid.py  find_conversion_factors.py  fopt.py  impedance.py  izhikevich_network.py  kernel.py  lcg_xml.py  ltp_ltd.py  ltp_ltd_protocol.py  ou_protocol.py  plot_file.py  prc.py  prc_protocol.py  process_ecode.py  psp_opt.py  pulse.py  pulses.py  pulses_protocol.py  ramp.py  rate_steps.py  (+21 more)
python/scripts/: cv.py  f_opt.py  psp_opt.py  reliability_disynaptic.py
rt/: Makefile.am  engine.cpp  engine.h
src/: Makefile.am  aec.cpp  aec.h  analog_io.cpp  analog_io.h  analogy_io.cpp  analogy_io.h  comedi_io.cpp  comedi_io.h  common.h  conductance_stimulus.cpp  conductance_stimulus.h  configuration.cpp  configuration.h  connections.cpp  connections.h  constants.cpp  constants.h  converter.cpp  converter.h  currents.cpp  currents.h  daq_io.cpp  daq_io.h  delay.cpp  delay.h  dynamical_entity.cpp  dynamical_entity.h  engine.cpp  engine.h  entity.cpp  entity.h  event_counter.cpp  event_counter.h  events.cpp  events.h  frequency_clamp.cpp  frequency_clamp.h  frequency_estimator.cpp  frequency_estimator.h  (+39 more)
src/.deps/: dynamical_entity.Plo  utils.Plo
stimgen/: Makefile.am  documentation.tex  error_msgs.c  error_msgs.h  file_parsing.c  file_parsing.h  generate_trial.c  generate_trial.h  rando.c  rando.h  stimgen_common.h  waveforms.c  waveforms.h
streams/: Makefile.am  channel.cpp  channel.h  stream.cpp  stream.h
stylesheets/: pygment_trac.css  styles.css
